# home-lens

./: .gitignore  PROJECT_DOCS.md  README.md
.superpowers/sdd/: final-fix-report.md  task-1-report.md  task-2-report.md  task-3-report.md  task-4-report.md  task-5-report.md  task-6-report.md
apps/market-analysis-api/: README.md  pom.xml
apps/ml-api/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
apps/ml-api/app/: __init__.py  config.py  main.py  model_service.py  schemas.py  training.py
apps/ml-api/data/: House Price Dataset & Test Data For Prediction.xlsx
apps/ml-api/tests/: test_api.py  test_model_service.py  test_schemas.py  test_training.py
apps/property-estimator-api/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/property-estimator-api/app/: __init__.py  config.py  main.py  ml_client.py  repository.py  schemas.py  service.py
apps/property-estimator-api/tests/: test_api.py  test_ml_client.py  test_repository.py  test_schemas.py  test_service.py
apps/web-portal/: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
apps/web-portal/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
apps/web-portal/components/: app-shell.tsx  nav-link.tsx
docs/superpowers/plans/: 2026-07-15-ml-api-implementation.md  2026-07-15-property-estimator-api-implementation.md  2026-07-16-market-analysis-api-implementation.md  2026-07-16-market-analysis-dashboard-implementation.md  (+1 more)
scripts/: smoke-check.sh  start-local.sh  stop-local.sh
(+99 files in other folders)
