[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "house-price-ml-api"
version = "0.1.0"
description = "FastAPI service for housing price prediction"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pandas>=2.2,<3.0",
  "openpyxl>=3.1,<4.0",
  "scikit-learn>=1.5,<2.0",
  "joblib>=1.4,<2.0",
  "numpy>=1.26,<3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "httpx>=0.27,<1.0"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
