[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "property-estimator-api"
version = "0.1.0"
description = "FastAPI backend for property value estimates"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "httpx>=0.27,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
